unpackaged/main/default/objects/Community_Member__c/Community_Member__c.object-meta.xml
<CustomObject>
    <description>Object to store community member information for Rise Together Charity Organization.</description>
    <label>Community Member</label>
    <nameField>
        <displayFormat>CM-{yyyy}-{0000}</displayFormat>
        <label>Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>