unpackaged/main/default/objects/Community_Member__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <description>Captures Aadhar number from the users</description>
    <inlineHelpText>Enter your 12-digit Aadhar number without spaces or special characters</inlineHelpText>
    <label>Aadhar Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>