unpackaged/main/default/objects/Community_Member__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Captures Date of birth of the users</description>
    <inlineHelpText>Please Enter Your Date of Birth in this Format ( 31-Dec-2024)</inlineHelpText>
    <label>BirthDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>