unpackaged/main/default/objects/Community_Member__c/fields/CommMember_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>CommMember_Approver_Comments__c</fullName>
    <description>Stores comments from the approver regarding the Community Member record</description>
    <label>CommMember Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>