unpackaged/main/default/objects/Community_Member__c/fields/Community_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Member_Name__c</fullName>
    <label>Community Member Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>