unpackaged/main/default/objects/Community_Member__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Captures User Email Id</description>
    <inlineHelpText>Please enter your Email (Example@Gmail.com)</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>