unpackaged/main/default/objects/Community_Member__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Captures User Contact number</description>
    <inlineHelpText>Please enter your Phone number [Must be exactly 10 characters (letters or numbers)]</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>