unpackaged/main/default/objects/Community_Member__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Captures username from the user</description>
    <inlineHelpText>Enter a valid username &amp; it should be in the email format (e.g., user@example.com). This can also be the same as your email address. It must be unique and will serve as your login identifier.</inlineHelpText>
    <label>Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>