unpackaged/main/default/objects/Community_Member__c/validationRules/DOB_not_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_not_future_date</fullName>
    <active>true</active>
    <description>To ensure the DOB does not fall on the future dates</description>
    <errorConditionFormula>BirthDate__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>BirthDate__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be a future date.</errorMessage>
</ValidationRule>