unpackaged/main/default/objects/Community_Member__c/validationRules/Email_ID_Format_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_ID_Format_Check</fullName>
    <active>false</active>
    <errorConditionFormula>NOT ( REGEX( Email__c   , &#39;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,4}$&#39;) )</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email Format Incorrect</errorMessage>
</ValidationRule>