unpackaged/main/default/objects/Community_Member__c/validationRules/First_Name_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Check</fullName>
    <active>true</active>
    <description>Validation for First Name</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(First_Name__c)),
    NOT(REGEX(First_Name__c, &quot;^[A-Za-z ]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>First Name cannot contain numbers or special characters.</errorMessage>
</ValidationRule>