unpackaged/main/default/objects/Community_Member__c/validationRules/Last_Name_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_Check</fullName>
    <active>true</active>
    <description>Last Name Validation</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Last_Name__c)),
    NOT(REGEX(Last_Name__c, &quot;^[A-Za-z ]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>Last Name cannot contain numbers or special characters.</errorMessage>
</ValidationRule>