unpackaged/main/default/objects/Community_Member__c/validationRules/Phone_Number_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Check</fullName>
    <active>true</active>
    <description>Phone number must be exactly 10 characters (letters or numbers)</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Phone__c )),  
    NOT(REGEX(Phone__c, &quot;^[a-zA-Z0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone number must be exactly 10 characters (letters or numbers)</errorMessage>
</ValidationRule>