unpackaged/main/default/objects/Community_Member__c/validationRules/Prevent_status_reversion_to_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_status_reversion_to_Inactive</fullName>
    <active>false</active>
    <description>Ensure the Member  status is not changed to inactive once it is active .</description>
    <errorConditionFormula>AND(
    ISCHANGED(Member_Status__c),
    ISPICKVAL(Member_Status__c, &quot;Inactive&quot;),
    ISPICKVAL(Approval_Status__c, &quot;Approved&quot;)
)</errorConditionFormula>
    <errorDisplayField>Member_Status__c</errorDisplayField>
    <errorMessage>Community Member  status can not be changed to inactive once it is approved .</errorMessage>
</ValidationRule>