unpackaged/main/default/objects/Community_Member__c/listViews/Records_with_created_date.listView-meta.xml
<ListView>
    <fullName>Records_with_created_date</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Records with created date</label>
</ListView>